# DocumentKnowledgeHub

./: .gitignore  README.md  SYSTEM_DESIGN.md  pyproject.toml
document_knowledge_hub/: .env.example  Dockerfile  README.md  docker-compose.yml  init_database.py  init_db.py  pyproject.toml  pytest.ini
document_knowledge_hub/app/: auth.py  database.py  main.py  models.py  schemas.py
document_knowledge_hub/app/api/v1/endpoints/: auth.py  documents.py
document_knowledge_hub/app/core/: config.py  security.py
document_knowledge_hub/app/db/: session.py
document_knowledge_hub/app/models/: __init__.py  document.py  user.py
document_knowledge_hub/app/routes/: auth_routes.py  docs_routes.py
document_knowledge_hub/app/schemas/: document.py  token.py  user.py
document_knowledge_hub/app/utils/: extractors.py
document_knowledge_hub/test/: test_basic.py
document_knowledge_hub/tests/: conftest.py
document_knowledge_hub/tests/unit/: test_auth.py  test_documents.py  test_file_upload.py  test_rate_limiting.py
document_knowledge_hub/tests/utils/: auth.py
